--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
 
             h2 {
                 font-size: 1.5rem;
+                padding-left:1.2rem;
             }
 
             p, ul {
