--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
         footer{
             text-align: center;
             font-size: 10px;
-            font-weight: 400;
+            font-weight: 600;
+            padding-top:10px;
         }
 
         
@@ -219,7 +220,7 @@
         </ul> 
 
     <footer>
-        <p>© 2024 John Kenneth Lamoste</p>
+        <p>© 2024 John Kenneth M. Lamoste. All right reserved</p>
     </footer>
 
 </body>
